[package]
name = "wasps"
version = "0.1.0"
edition = "2021"
default-run = "server"

[[bin]]
name = "implant"

[[bin]]
name = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.18"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.28.2", features = ["full"] }
